--- a/xunta-web/src/main/resources/jdbc.properties
+++ b/xunta-web/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.username=root
 #jdbc.url=jdbc:mysql://aigine.eicp.net:41403/xu_db?useUnicode=true&amp;characterEncoding=UTF-8
-jdbc.url=jdbc:mysql://localhost:3306/db_yi?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3306/wolf?useUnicode=true&amp;characterEncoding=UTF-8
 jdbc.password=660419
 jdbc.initialPoolSize=50
 jdbc.minPoolSize=30
