--- a/xunta-root/pom.xml
+++ b/xunta-root/pom.xml
@@ -282,6 +282,11 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+   			<artifactId>jedis</artifactId>
+    		<version>2.9.0</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
