--- a/xunta-web/src/main/resources/redis.properties
+++ b/xunta-web/src/main/resources/redis.properties
@@ -1,4 +1,6 @@
 #Redis settings
+#不在一个服务器上host ip也得改，用内网ip不要用外网
+#redis.host=10.241.46.3
 redis.host=127.0.0.1
 redis.port=6379
 redis.timeout=10000
