聊天列表页和对话页的样式调整. 将两个.properties文件列入忽略文件.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ Servers/
 target/
 zoie-config.properties
 qqconnectconfig.properties
+/xunta-web/src/main/resources/jdbc.properties
+/xunta-web/src/main/resources/redis.properties
