--- a/xunta-web/src/main/resources/wechat.properties
+++ b/xunta-web/src/main/resources/wechat.properties
@@ -18,5 +18,8 @@ aini_templateid=HL4oy8G3OfIqe5THQfLw4XyOxagLY89z90ewUScnj1M
 #aini微信公众号模版消息链接
 aini_templateurl=www.ainiweddingcloud.com
 
+#微信公众号服务器配置的token
+xunta_serverToken=660419
+
 #微信公众号token_url
 #token_url=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=APPID&secret=APPSECRET
