--- a/xunta-web/pom.xml
+++ b/xunta-web/pom.xml
@@ -16,8 +16,11 @@
 			<artifactId>xunta-websocket</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
-
+		<dependency>
+    		<groupId>xstream</groupId>
+    		<artifactId>xstream</artifactId>
+    		<version>1.1.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>xunta-web</finalName>
