--- a/xunta-web/src/main/resources/wechat.properties
+++ b/xunta-web/src/main/resources/wechat.properties
@@ -7,7 +7,7 @@ xunta_appsecret=753b50cf29b6b08e733e357cc0ed348c
 #xunta微信公众号模版消息id
 xunta_templateid=jNHGVWH1ByKjMLFmSIQO5zLFtrdBeJhH-jayd3MyVU8
 #xunta微信公众号模版消息链接
-xunta_templateurl=www.xunta.so
+xunta_templateurl=https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxdac88d71df6be268&redirect_uri=http%3a%2f%2fwww.xunta.so%2fwxpnCallback&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect
 
 #aini微信公众号appid
 aini_appid=wx90a0a96298054d38
@@ -16,7 +16,7 @@ aini_appsecret=bd0bf1818c0cb529e42f26d2ef369908
 #aini微信公众号模版消息id
 aini_templateid=HL4oy8G3OfIqe5THQfLw4XyOxagLY89z90ewUScnj1M
 #aini微信公众号模版消息链接
-aini_templateurl=www.ainiweddingcloud.com
+aini_templateurl=https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxdac88d71df6be268&redirect_uri=http%3a%2f%2fwww.ainiweddingcloud.com%2fwxpnCallback&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect
 
 #微信公众号服务器配置的token
 xunta_serverToken=660419
