--- a/xunta-web/src/main/resources/wechat.properties
+++ b/xunta-web/src/main/resources/wechat.properties
@@ -1,25 +1,25 @@
 #这是微信公众号的各个参数保存
 
 #xunta微信公众号appid
-xunta_appid=wxdac88d71df6be268
+appid=wxdac88d71df6be268
 #xunta微信公众号appsecret
-xunta_appsecret=753b50cf29b6b08e733e357cc0ed348c
+appsecret=753b50cf29b6b08e733e357cc0ed348c
 #xunta微信公众号模版消息id
-xunta_templateid=jNHGVWH1ByKjMLFmSIQO5zLFtrdBeJhH-jayd3MyVU8
+templateid=jNHGVWH1ByKjMLFmSIQO5zLFtrdBeJhH-jayd3MyVU8
 #xunta微信公众号模版消息链接
-xunta_templateurl=https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxdac88d71df6be268&redirect_uri=http%3a%2f%2fwww.xunta.so%2fwxpnCallback&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect
+templateurl=https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxdac88d71df6be268&redirect_uri=http%3a%2f%2fwww.xunta.so%2fwxpnCallback&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect
 
 #aini微信公众号appid
-aini_appid=wx90a0a96298054d38
+#appid=wx90a0a96298054d38
 #aini微信公众号appsecret
-aini_appsecret=bd0bf1818c0cb529e42f26d2ef369908
+#appsecret=bd0bf1818c0cb529e42f26d2ef369908
 #aini微信公众号模版消息id
-aini_templateid=HL4oy8G3OfIqe5THQfLw4XyOxagLY89z90ewUScnj1M
+#templateid=HL4oy8G3OfIqe5THQfLw4XyOxagLY89z90ewUScnj1M
 #aini微信公众号模版消息链接
-aini_templateurl=https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxdac88d71df6be268&redirect_uri=http%3a%2f%2fwww.ainiweddingcloud.com%2fwxpnCallback&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect
+#templateurl=https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxdac88d71df6be268&redirect_uri=http%3a%2f%2fwww.ainiweddingcloud.com%2fwxpnCallback&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect
 
-#微信公众号服务器配置的token
-xunta_serverToken=660419
+#xunta微信公众号服务器配置的token
+serverToken=660419
 
 #微信公众号token_url
 #token_url=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=APPID&secret=APPSECRET
