--- a/xunta-root/pom.xml
+++ b/xunta-root/pom.xml
@@ -278,10 +278,18 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 		</dependency>
+		<!--redis-->
 		<dependency>
 			<groupId>redis.clients</groupId>
    			<artifactId>jedis</artifactId>
     		<version>2.9.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+		<dependency>
+		    <groupId>net.sf.json-lib</groupId>
+		    <artifactId>json-lib</artifactId>
+		    <version>2.4</version>
+		    <classifier>jdk15</classifier>
 		</dependency>
 	</dependencies>
 
